force-app/main/default/objects/ContentBlock__mdt/ContentBlock__mdt.object-meta.xml
<CustomObject>
    <label>Content Block</label>
    <pluralLabel>Content Block</pluralLabel>
</CustomObject>