force-app/main/default/objects/ContentBlock__mdt/fields/ContentText__c.field-meta.xml
<CustomField>
    <fullName>ContentText__c</fullName>
    <label>Content Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>