force-app/main/default/objects/ContentBlock__mdt/fields/PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>PicklistValue__c</fullName>
    <label>Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>